2009-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Reduce the amount of text on the front page.

2009-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick.spec.in: The module .la files need to be
	installed as part of the base install or else the modules will
	fail to load.

2009-01-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dib.c (ReadDIBImage): Fix assertion thrown for DIB files
	with negative image height values.

2009-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Fix assertion thrown for BMP files
	with negative image height values.  Resolves SF issue 2523536 "bug
	in bmp coder".

	* Makefile.am: Don't install Magick++ headers if Magick++ is
	disabled.

	* GraphicsMagick.spec.in: --enable-lzw option is no longer used.

2009-01-17  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: More robust fits parsing.

2009-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated news.

2009-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/colorspace.c (XYZTransformPackets): Fix arithmetic
	overflow problem noticed for Q32 build when using GCC on
	big-endian systems.

	* magick/constitute.c: Update Richard Nolde's float 16 and 24
	functions.

	* magick/command.c (VersionCommand): Print some build information
	for MSVC builds.

2009-01-10  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: Ability to skip unsupported multidimensional object.

2009-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (GetBlobSize): It seems that under Windows, the
	zip stream is not usable as a file handle.  Switch back to using
	stat instead, but use _stati64 if available.

2009-01-04  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: Fixed bug in scene count in extension block.
	* coders/fits.c: Supported logging.

2009-01-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
