@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2009-01-27  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/pixel_cache.c (OpenCache): Remove conservative
+        pre-allocation of pixel indexes.
+
+</UL>
+<p>
 2009-01-24  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
